Fixes flex wrap in 'intro' section and sign-up box

--- a/css/style.scss
+++ b/css/style.scss
@@ -37,13 +37,15 @@ body {
     transform: scaleX(-1);
     height: auto;
     width: 50px;
+    margin: 0 2%;
 }
 
 ul {
     display: inline-flex;
     font-size: 18px;
-    gap: 20px;
+    gap: 30px;
     list-style: none;
+    margin: 0 2%;
 }
 
 .intro {
@@ -51,9 +53,9 @@ ul {
     background-color: $dark-background;
     display: flex;
     flex: 1;
-    flex-direction: row;
+    flex-flow: row wrap;
     justify-content: space-around;
-    padding: 20px 80px;
+    padding: 20px 5%;
 }
 
 h1 {
@@ -163,9 +165,9 @@ h3 {
     align-items: center;
     color: white;
     display: flex;
-    gap: 50px;
-    justify-content: space-around;
-    padding: 6px 50px;
+    justify-content: space-between;
+    padding: 6px 20px;
+    width: 60%;
 }
 
 .text h4 {
@@ -175,6 +177,7 @@ h3 {
 .text p {
     color: $secondary-text;
     font-size: 12px;
+    margin-top: -16px;
 }
 
 .box button {
@@ -183,7 +186,7 @@ h3 {
     border-radius: 4px;
     color: $main-text;
     height: 30px;
-    width: 90px;
+    min-width: 80px;
 }
 
 .footer {
